Fix hero section to fit full screen and remove extra margins

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -56,7 +56,7 @@
     display: block;
     position: absolute;
     right: 1rem;
-    top: 1rem;
+    top: 0.5rem;
   }
 
   .navbar-links {
